# NASCAR-AI-Strategy-Engine

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README (4).md  README.md  README_POSITIONING_SUMMARY.md  README_UPDATE_SUMMARY.md  SOLUTION_SUMMARY.md  STREAMLIT_CLOUD_DEPLOYMENT.md  STREAMLIT_CLOUD_TROUBLESHOOTING.md  app.py  benchmark.py  config.py  demo_monte_carlo.py  deploy_reminder.sh  generate_images.sh  generate_readme_images.py  pyproject.toml  requirements.txt  requirements_streamlit_cloud.txt  run_dashboard.sh  test_deployment.py  test_mid_race_fix.py  train_caution_model.py
.streamlit/: config.toml
data/: generate_synthetic_data.py
docs/: BUSINESS_CASE.md  CASE_STUDY_TEMPLATE.md  DEMO_SCRIPT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  PRESENTATION_SLIDES.md  PROJECT_COMPLETE.md  SIMULATOR_DESIGN.md
docs/phases/: PHASE1_ADJUSTMENTS_SUMMARY.md  PHASE1_REVIEW.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASES_1_3_COMPLETE.md
scripts/: init_gam_models.py
src/: decision_analyzer.py  features.py  models.py  monte_carlo.py  nascar_points.py  sensitivity.py  simulator.py  strategy.py  tire_model.py
tests/: test_decision_analyzer.py  test_integration.py  test_models.py  test_monte_carlo.py  test_nascar_points.py  test_sensitivity.py  test_simulator.py  test_tire_model.py
