[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nascar_strategy"
version = "0.1.0"
description = "NASCAR AI Strategy Engine - Monte Carlo simulation and optimization for race strategy"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Leonardo Schiavoni", email = "leonardoschiavoni82@gmail.com"}
]
keywords = ["nascar", "racing", "simulation", "strategy", "monte-carlo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=0.24.0",
    "xgboost>=1.5.0",
    "joblib>=1.0.0",
    "tqdm>=4.60.0",
    "streamlit>=1.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
