[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nascar_strategy"
version = "0.1.0"
description = "NASCAR AI Strategy Engine - Monte Carlo simulation and optimization for race strategy"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Leonardo Schiavoni", email = "leonardoschiavoni82@gmail.com"}
]
keywords = ["nascar", "racing", "simulation", "strategy", "monte-carlo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Dependencies moved to requirements.txt for Streamlit Cloud compatibility
# This prevents conflicts and ensures consistent dependency resolution

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"nascar_strategy" = "src"
